@@ -10,7 +10,6 @@
 - add info about file as cmdline-arg in --help text
 - string cleanups
 - program-launchers for misc account types
-- import/export of .netrc files
 - use xpath for xml handling instead of plain dom?
 - add autosaving of files (needs a preference)
 - add docstrings to all objects, methods and functions
